<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1a2135"
    android:orientation="vertical">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:src="@mipmap/icon_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            style="@style/WalletCodeTitleTextStyle"
            android:text="@string/wh_set_pwd"
            android:textColor="@color/yellow" />

        <TextView
            style="@style/WalletCodeTextStyle"
            android:text="@string/wh_set_pwd_save" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp">

        <View
            android:layout_width="8dp"
            android:layout_height="24dp"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:text="@string/wh_sp_login_pwd"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />

    </LinearLayout>

    <EditText
        style="@style/WalletCodeEditStyle"
        android:layout_marginTop="10dp"
        android:hint="@string/wh_sp_login_pwd_hint"
        android:textColorHint="@color/black" />

    <TextView
        style="@style/WalletCodeTextStyle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/wh_phone_valite_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp">

        <View
            android:layout_width="8dp"
            android:layout_height="24dp"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/wh_sp_login_pwd_sure"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />

    </LinearLayout>

    <EditText
        style="@style/WalletCodeEditStyle"
        android:layout_marginTop="10dp"
        android:hint="@string/wh_sp_login_pwd_sure_hint"
        android:textColorHint="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp">

        <View
            android:layout_width="8dp"
            android:layout_height="24dp"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/wh_sp_pay_pwd"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />

    </LinearLayout>

    <EditText
        style="@style/WalletCodeEditStyle"
        android:layout_marginTop="10dp"
        android:text="@string/wh_sp_pay_pwd_hint"
        android:textColorHint="@color/black" />

    <TextView
        style="@style/WalletCodeTextStyle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/wh_phone_valite_number_zoom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp">

        <View
            android:layout_width="8dp"
            android:layout_height="24dp"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/wh_sp_pay_pwd_sure"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />

    </LinearLayout>

    <EditText
        style="@style/WalletCodeEditStyle"
        android:layout_marginTop="10dp"
        android:text="@string/wh_sp_pay_pwd_sure_hint"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/btn_next"
        style="@style/WalletHoteBtnStyle"
        android:layout_marginTop="40dp"
        android:text="@string/wt_type_next" />
</LinearLayout>