<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1a2135"
    android:orientation="vertical">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:src="@mipmap/icon_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            style="@style/WalletCodeTitleTextStyle"
            android:text="@string/wc_backup" />

        <TextView
            style="@style/WalletCodeTextStyle"
            android:text="@string/wc_backup_single" />

        <TextView
            style="@style/WalletCodeTextStyle"
            android:text="@string/wc_backup_double" />

    </LinearLayout>

    <TextView
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/wc_backup_good" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="360dp"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_next"
        style="@style/WalletCodeBtnStyle"
        android:layout_marginTop="40dp"
        android:text="@string/wv_done" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/wv_reset"
        android:textColor="@color/white" />
</LinearLayout>