<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1a2135"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <TextView
            style="@style/WalletCodeTitleTextStyle"
            android:text="@string/wh_login_alsc"
            android:textColor="@color/yellow" />

        <TextView
            style="@style/WalletCodeTextStyle"
            android:text="@string/wh_alsc_describe" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp">

        <View
            android:layout_width="8dp"
            android:layout_height="24dp"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:text="@string/wh_login_user"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />

    </LinearLayout>

    <EditText
        style="@style/WalletCodeEditStyle"
        android:layout_marginTop="10dp"
        android:hint="@string/wh_login_user_hint"
        android:textColorHint="@color/black" />

    <TextView
        style="@style/WalletCodeTextStyle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/wh_phone_valite_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp">

        <View
            android:layout_width="8dp"
            android:layout_height="24dp"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/wh_login_pwd"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />

    </LinearLayout>

    <EditText
        style="@style/WalletCodeEditStyle"
        android:layout_marginTop="10dp"
        android:hint="@string/wh_login_pwd_hint"
        android:textColorHint="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp">

        <View
            android:layout_width="8dp"
            android:layout_height="24dp"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/wc_hote_picture"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />

    </LinearLayout>

    <EditText
        style="@style/WalletCodeEditStyle"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="VGSC"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/wc_hote_change"
            android:textColor="@color/white_deep" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/WalletHoteBtnStyle"
        android:layout_marginTop="40dp"
        android:text="@string/wh_login" />
</LinearLayout>