<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:text="@string/wh_register"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_26" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/wh_register_account"
        android:textColor="@color/divider"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/wh_register_unlock"
        android:textColor="@color/divider"
        android:textSize="@dimen/text_size_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:background="@drawable/bg_transparent_radius"
            android:text="@string/wh_register_no_set"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_size_18" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/bg_yellow_radius"
            android:text="@string/wh_register_no_set"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>
</LinearLayout>